aws/tryout/tryout-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tryout-deployment
  labels:
    app: tryout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tryout
  template:
    metadata:
      labels:
        app: tryout
    spec:
      containers:
        - name: tryout
          image: nginxdemos/hello:latest
          ports:
            - containerPort: 80
