aws/tryout/tryout-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tryout-service
spec:
  type: LoadBalancer
  selector:
    app: tryout
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
